--- a/views/front.ejs
+++ b/views/front.ejs
@@ -7,34 +7,40 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-   
-
-
-   <!-- <form id="login"><h2>login</h2>
+   <form id="login"><h2>login</h2>
         <input type="text" name="username" placeholder="Username"></input>
-        <input type="text" name="password" type="password" placeholder="Password"></input>
+        <input type="password" name="password" placeholder="Password"></input>
         <input type="submit" name="submit" value="login" placeholder="submit"></input>  
-   </form> -->
+   </form>
 
-   <form id="register" method="POST" action="/signup"><h2>register</h2>
+   <form id="register"><h2>register</h2>
         <input type="text" name="username" placeholder="Username"></input>
-        <input type="text" name="password" type="password" placeholder="Password"></input>
+        <input type="password" name="password" placeholder="Password"></input>
         <input type="submit" name="submit" value="register" placeholder="submit"></input>
     </form>
 
-
-   <!-- <script>
+   <script>
        const form = document.querySelector('#register');
-       form.addEventListener('submit', (e) => { 
+       form.addEventListener('submit', async (e) => { 
             e.preventDefault();
 
-            const mail = form.email.value;
-            const pwd = form.password.value;
+            const username = form.username.value;
+            const password = form.password.value;
+
+            try {
+                const res = await fetch('/signup', {
+                    method: 'POST',
+                    body: JSON.stringify({username, password}),
+                    headers: { 'Content-Type': 'application/json' }
+                })
+
+            }
+            catch(err) {
+                console.log(err);
+            }
 
        })
-
-
-   </script> -->
+   </script>
 
 </body>
 </html>
