--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,24 +8,16 @@
 </head>
 <body> 
 
-<!-- 
+
    <form id="login"><h2>login</h2>
         <span class="username-err"></span>
         <input type="text" name="username" placeholder="username"></input>
         <span class="password-err"></span>
         <input type="password" name="password" placeholder="password"></input>
         <input type="submit" name="submit" value="login" placeholder="submit"></input>  
-   </form> -->
+   </form>
 
-   <form id="register"><h2>register</h2>   
-        <span class="username-err"></span>
-        <input type="text" name="username" placeholder="Username"></input>
-        <span class="password-err"></span>
-        <input type="password" name="password" placeholder="Password"></input>
-        <input type="submit" name="submit" value="register" placeholder="submit"></input>
-    </form>
-
-   <script src="./register.js"></script>
+   <script src="./login.js"></script>
 
 </body> 
 </html>
