--- a/views/front.ejs
+++ b/views/front.ejs
@@ -16,6 +16,7 @@
         <input type="password" name="password" placeholder="password"></input>
         <input type="submit" name="submit" value="login" placeholder="submit"></input>  
    </form> -->
+<a href="/login">go login</a>
 
    <form id="register"><h2>register</h2>   
         <span class="username-err"></span>
