--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body> 
-
+    <a href="/">go register</a>
 
    <form id="login"><h2>login</h2>
         <span class="username-err"></span>
